--- a/style.css
+++ b/style.css
@@ -1,20 +1,57 @@
 body {
     padding: 0;
     margin: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
-#map {
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 320px;
+    height: 100%;
+    border-left: 1px solid #ccc;
+    border-radius: 4px;
+    background: white;
+    overflow: hidden;
+}
+
+.map {
     position: fixed;
     width: 100%;
     height: 100%;
 }
 
-#info {
-    font-family: sans-serif;
-    position: absolute;
-    top: 16px;
-    right: 16px;
-    width: 240px;
-    height: 160px;
-    background: white;
+.track-list {
+    max-height: 100%;
+    overflow-y: auto;
+    list-style: none;
+    padding-left: 0;
+    padding-top: 0;
+}
+
+.track-list li {
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+    padding-left: 12px;
+    padding-bottom: 4px;
+    padding-right: 8px;
+}
+
+.track-list li:hover {
+    background: #fff8f0;
+}
+
+.track-list li a {
+    color: inherit;
+    text-decoration: none;
+}
+.track-list .summary {
+    float: right;
+    font-size: 75%;
+    clear: right;
+}
+
+.row {
+    clear: both;
 }
