--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,15 +1,18 @@
 <ul class="track-list">
     {{#each tracks}}
-    <li>
-        <a href="{{ this.url }}">
-            <div class="summary">{{ distance this.distance 2 }} km</div>
-            <div class="summary">{{ time this.time }}</div>
-            <div class="summary">{{ pace this }}</div>
-            <time datetime="{{ this.date }}">{{ date this.date }}</time>
-            {{ this.name }}<br/>
-            {{ this.location }}
-            <div class="row"></div>
-        </a>
-    </li>
+    <a name="{{ this.id }}">
+        <li data-track="{{ this.id }}">
+            <a href="{{ this.url }}">
+                <div class="summary">{{ distance this.distance 2 }} km</div>
+                <div class="summary">{{ time this.time }}</div>
+                <div class="summary">{{ pace this }}</div>
+                <time datetime="{{ this.date }}">{{ date this.date }}</time>
+                {{ this.name }}<br/>
+                {{ this.location }}
+                <div class="row"></div>
+            </a>
+            <div class="details"></div>
+        </li>
+    </a>
     {{/each}}
 </ul>
