--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+h2, p, a {
+    padding-left: 12px;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -28,6 +33,7 @@ body {
     list-style: none;
     padding-left: 0;
     padding-top: 0;
+    border-top: 1px solid #ccc;
 }
 
 .track-list li {
@@ -45,6 +51,7 @@ body {
 .track-list li a {
     color: inherit;
     text-decoration: none;
+    padding-left: 0;
 }
 
 .selected {
